...
              children: [
                Padding(
                  padding: EdgeInsets.all(40.0),
                ),
                Text(
                  "$stepTimeRemaining",
                  key: Key("current-time"),
                  style: TextStyle(
                      letterSpacing: 1.5,
                      fontFamily: 'Kollektif',
                      color: Colors.white,
                      fontSize: 96,
                      fontWeight: FontWeight.w400),
                ),
                Padding(
                  padding: EdgeInsets.all(25.0),
                ),
                Text(
                  "${currentRecipeStep.text}",
                  key: Key("current-step"),
                  style: TextStyle(
                      letterSpacing: 1.5,
                      fontFamily: 'Kollektif',
                      color: Colors.white,
                      fontSize: 24,
                      fontWeight: FontWeight.w400),
...
