...
  int time = 0;
  for (RecipeStep step in steps) {
    time += step.time;
  }

  CoffeeRecipe recipe = CoffeeRecipe(
      name: "PTs Clever Dripper",
      coffeeVolumeGrams: 25,
      waterVolumeGrams: 450,
      grindSize: "medium-coarse ground coffee",
      miscDetails: "Frenchie, drip, best of both worlds.",
      steps: steps,
      totalTime: time);
...
